fixed issue with abnormal padding on the homepage animation when viewing on mobile

--- a/frontend/src/components/Home/SectionOne.css
+++ b/frontend/src/components/Home/SectionOne.css
@@ -16,15 +16,8 @@
 
 .section-one-lottie {
     width: 350px;
-    height: auto;
-    z-index: 1;
-}
-
-.section-one-image-shadow {
-    width: 350px;
     height: 350px;
-    /* box-shadow: inset 0 0 50px 1px rgb(164, 164, 164); */
-
+    z-index: 1;
 }
 
 @media (max-width: 1450px) {
@@ -41,7 +34,6 @@
         flex-direction: column;
         align-items: center;
         padding: 20px;
-
     }
 
     .section-one-text-container {
